syntax = 'proto3';

message Input {
  string prev_hash = 1;
  int32 prev_index = 2;
}

message Output {
  string asset_id = 1;
  int32 value = 2;
  string script_hash = 3;
}

message Script {
  string invocation_script = 1;
  string verification_script = 2;
}

message Tx {
  int32 type = 1;
  int32 version = 2;
  repeated string attributes = 3;
  repeated Input inputs = 4;
  repeated Output outputs = 5;
  repeated Script scripts = 6;
  int32 gas = 7;
}

message NeoTransaction {
  Tx tx = 1;
  string publicKey = 2;
  string url = 3;
  int32 fees = 4;
}